<resources>
    <string name="app_name">Instamart</string>
    <string name="title_activity_login">Giriş Yap</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_take_photo_and_sell">Çek ve Sat</string>
    <string name="menu_search">Ara</string>
    <string name="menu_demand">Talep Et</string>
    <string name="menu_settings">Ayarlar</string>
    <string name="menu_categories">Kategoriler</string>
    <string name="menu_logout">Çıkış Yap</string>
    <string name="prompt_email">Eposta</string>
    <string name="prompt_password">Şifre</string>
    <string name="action_sign_in">Kaydol yada Giriş Yap</string>
    <string name="action_reg_short">Kaydol</string>
    <string name="action_login_short">Giriş Yap</string>
    <string name="error_invalid_email">Eposta adresi geçersiz</string>
    <string name="error_invalid_password">Şifre çok kısa</string>
    <string name="error_incorrect_password">Şifre geçersiz</string>
    <string name="error_field_required">Gerekli</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_product_list">Instamart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="passwords_is_not_sync">Şifre Aynı Değil</string>
    <string name="error_invalid_name">İsim Geçersiz</string>
    <string name="password_again_cannot_empty">Şifreyi Tekrar Girin</string>
    <string name="password_cannot_empty">Şifreyi Girin</string>
    <string name="register_button">Kaydol</string>
    <string name="login_button">Giriş Yap</string>
    <string name="logo_script">Instamart</string>
    <string name="text_name">İsim</string>
    <string name="text_email">Eposta</string>
    <string name="text_password">Şifre</string>
    <string name="text_password_again">Şifre Tekrar</string>
    <string name="text_login_switch">Kayıtlı mısınız? Giriş Yapın</string>
    <string name="text_register_switch">Üye değil misiniz? Kaydolun</string>
    <string name="content_description_background">Arkaplan Fotoğrafı</string>
    <string name="logging_in">Giriş Yapılıyor…</string>
    <string name="signing_up">Kaydolunuyor…</string>
    <string name="please_try_again">Lütfen Tekrar Deneyin</string>
    <string name="registration_denied">Kayıt İşlemi Reddedildi</string>
    <string name="login_denied">Giriş İşlemi Reddedildi</string>
    <string name="unknown_problem">Belirlenemeyen Bir Sorun Oluştu</string>
    <string name="email_already_registered">Bu Eposta Zaten Kayıtlı</string>
    <string name="network_connection_problem">İnternet Bağlantısı Yok</string>
    <string name="serverside_problem">Bağlantı Sorunu Var</string>
    <string name="email_or_password_incorrect">Eposta Yada Şifre Hatalı</string>
    <string name="invalid_account">Geçersiz Hesap</string>
    <string name="already_sign_on">Bu Kullanıcının Hesabı Zaten Açık</string>
    <string name="database_connection_problem">Veritabanı Bağlantı Sorunu Oluştu</string>
    <string name="database_problem">Veritabanı Sorunu Oluştu</string>
    <string name="email_and_password_required">Eposta ve Şifre Gerekiyor</string>
    <string name="logout_denied">Çıkış İşlemi Reddedildi</string>
    <string name="unauthorized_access">Yetkisiz Erişim</string>
    <string name="f_successfully_registered">f1</string>
    <string name="f_please_try_again">f2</string>
    <string name="f_this_email_already_exist">f3</string>
    <string name="f_register_denied">f4</string>
    <string name="f_successfully_logged_in">f5</string>
    <string name="f_email_or_password_incorrect">f6</string>
    <string name="f_invalid_account">f7</string>
    <string name="f_login_denied">f8</string>
    <string name="f_database_connection_problem">f9</string>
    <string name="f_database_problem">f10</string>
    <string name="f_already_sign_on">f11</string>
    <string name="f_email_and_password_required">f12</string>
    <string name="action_settings">Settings</string>
    <string name="price">Fiyat</string>
    <string name="explanation">Açıklama</string>
    <string name="again_take_photo">Tekrar Çek</string>
    <string name="publish">Yayınla</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign">Kaydol</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_setting">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
</resources>